--- a/fastqa-js.html
+++ b/fastqa-js.html
@@ -102,6 +102,7 @@ License: http://creativecommons.org/licenses/by-nc/3.0/
 	}
 </style>
 <p style="margin: 30px 50px 10px 50px;">FASTQA-JS is a web tool built completely in JavaScript so researchers can assess the quality of their <a href="http://en.wikipedia.org/wiki/FASTQ_format">FASTQ</a> files without installing extra programs or waiting for the large files to upload to another server. When a FASTQ file is dragged and dropped into the outlined box, they will be analyzed and a boxplot summery of quality scores will be displayed using the <a href="http://www.highcharts.com/">highcharts</a> api.</p>
+<p style="margin: 10px 50px;">Highcharts also allows you to export the resulting figure in a variety of image formats.</p>
 <p style="margin: 10px 50px 30px 50px;">Please check out more of my work at <a href="http://www.gregoryzynda.com">www.gregoryzynda.com</a>.</p>
 <div id="holder">
 	<p>Drag and drop an uncompressed FASTQ file for base quality score analysis.</p>
@@ -162,13 +163,18 @@ function percentile(array, p, total) {
 function computeBoxData(array) {
 	var count = arraySum(array);
 	var median = percentile(array, 1/2, count);
+	if(median > 73) { // determine offset
+		var offset = -64;
+	} else {
+		var offset = -33;
+	}
 	//console.log("median: "+median);
 	var q1 = percentile(array, 1/4, count);
 	var q3 = percentile(array, 3/4, count);
 	var iqr = q3-q1;
 	var lowW = q1-1.5*iqr;
 	var upW = q3+1.5*iqr;
-	return [lowW, q1, median, q3, upW];
+	return [lowW+offset, q1+offset, median+offset, q3+offset, upW+offset];
 }
 
 function parseFile(file){
@@ -176,8 +182,8 @@ function parseFile(file){
 		console.log("Please select a fastq file");
 		return true;
 	}
-    var chunkSize = 1500;
-    var fileSize = (file.size - 1);
+	var chunkSize = 1500;
+	var fileSize = (file.size - 1);
 	var line = 0;
 	var qualString = "";
 	var start = 0;
@@ -186,7 +192,7 @@ function parseFile(file){
 	var parseBlock = false;
 	var readCount = 0;
 
-    var parseChunk = function(text){
+	var parseChunk = function(text){
 		//console.log("chunk: "+text.target.result);
 		var splitResult = text.target.result.split(/\r?\n/); //split at new lines
 		for(var j=0; j<splitResult.length; j++) {
@@ -215,7 +221,7 @@ function parseFile(file){
 		} else {
 			nextChunk();
 		}
-    };
+	};
 	
 	function nextChunk() {
 		reader.readAsText(file.slice(start,start+chunkSize)); //read next blob
